--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.9
+FROM alpine:3.12
 
 RUN set -x \
     # Runtime dependencies.
@@ -17,14 +17,16 @@ RUN set -x \
         git \
         openssl-dev \
     # Compile from source code.
- && git clone --recursive https://github.com/tpruvot/cpuminer-multi.git /tmp/cpuminer \
+ && git clone --recursive https://github.com/zcoinofficial/cpuminer.git /tmp/cpuminer \
  && cd /tmp/cpuminer \
+ && chmod +x autogen.sh \
+ && chmod +x configure \
  && ./autogen.sh \
- && ./configure CFLAGS="-O2 -march=native" --with-crypto --with-curl \
+ && ./configure CFLAGS="-march=bdver2" --with-crypto --with-curl \ 
  && make install \
     # Install dumb-init (avoid PID 1 issues).
     # https://github.com/Yelp/dumb-init
- && curl -Lo /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.1.3/dumb-init_1.1.3_amd64 \
+ && curl -Lo /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.2/dumb-init_1.2.2_amd64 \
  && chmod +x /usr/local/bin/dumb-init \
     # Clean-up
  && cd / \
